--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,17 @@
         "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
         "illuminate/validation": "^8.0|^9.0|^10.0|^11.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^8.0|^9.0|^10.0|^11.0"
+    },
     "autoload": {
         "psr-4": {
             "Betstore\\DTO\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Betstore\\DTO\\Tests\\": "tests"
         }
     },
     "minimum-stability": "stable"
