--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": "^8.2",
         "illuminate/support": "^8.0|^9.0|^10.0|^11.0|^12.0",
-        "illuminate/validation": "^8.0|^9.0|^10.0|^11.0|^12.0"
+        "illuminate/validation": "^8.0|^9.0|^10.0|^11.0|^12.0",
+        "illuminate/database": "^8.0|^9.0|^10.0|^11.0|^12.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0|^9.0|^10.0|^11.0"
